casos de uso y exepciones